边界清理